# csci344

./: index.html  package-lock.json  package.json  styles.css  tailwind.config.js
homework/hw02/: index.html  styles.css
homework/hw03/: index.html
homework/hw03/js/: main.js  utilities.js
homework/hw04/: index.html
homework/hw04/src/: index.jsx
homework/hw05/: app.py
homework/hw05/views/: comments.py  post_likes.py  posts.py  stories.py  suggestions.py
homework/hw06/: app.py
homework/hw06/tests/: run_tests.py
homework/hw06/views/: authentication.py  followers.py  profile.py  token.py
lectures/intro-to-react/: index.html  styles.css
lectures/intro-to-react/src/: App.jsx  Welcome.jsx
lectures/jan29/intro-css-gallery/: index.html  (+1 more)
lectures/lecture04/: index.html  page2.html
lectures/lecture19/: in_class_challenges.py
lectures/orm-introduction/: .env  tester.py
quizzes/quiz01/: index.html  styles.css
tutorials/tutorial01/: index.html  music.html  style.css  videos.html
tutorials/tutorial02/: index.html  styles.css
tutorials/tutorial03/: index.html  package-lock.json  package.json  tailwind.config.js
tutorials/tutorial04/: index.html  main.js  utilities.js
tutorials/tutorial05/: index.html
tutorials/tutorial06/: index.html  main.js
tutorials/tutorial08/: package.json
tutorials/tutorial09/: app.py  pyproject.toml
tutorials/tutorial09/static/: style.css
tutorials/tutorial09/templates/: quote-of-the-day.html  restaurant.html  restaurants.html
tutorials/tutorial10/: answers.sql  questions.txt  short-answer-questions.txt
(+44 files in other folders)
