[tool.poetry]
name = "tutorial09"
version = "0.1.0"
description = ""
authors = ["kgary432 <kgary7373@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
